# rogalik

./: .editorconfig  LICENSE  README.md  rollup.config.js
api/: .gitignore  Cargo.toml  diesel.toml  main.go
api/migrations/2021-04-16-151010_create_users/: up.sql
api/migrations/2021-06-15-151208_create_tasks/: down.sql  up.sql
api/migrations/2021-06-15-161239_create_projects/: down.sql  up.sql
api/migrations/2021-06-18-134620_add_task_project_requirement/: down.sql  up.sql
api/rogalik_db/: Cargo.toml
api/rogalik_db/src/: lib.rs  models.rs  schema.rs
api/rogalik_endpoints/: Cargo.toml
api/rogalik_endpoints/src/: auth.rs  lib.rs  projects.rs  tasks.rs  tasks_users.rs  users.rs
api/src/: db.rs  main.rs  models.rs  schema.rs
docker/caddy/: Caddyfile
docker/development/: docker-compose.yml
docker/development/backend/: Dockerfile
frontend/: .eslintrc.js  README.md  jsconfig.json  package.json  postcss.config.js  rollup.config.js  snowpack.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.svelte  index.css  index.js  index.ts  main.js
frontend/src/atoms/: Input.svelte  InputFrame.svelte  RoundButton.svelte
frontend/src/config/: routes.js  routes.ts
frontend/src/icons/: AddIcon.svelte  CloseIcon.svelte  MoreIcon.svelte  PlayIcon.svelte  ProjectIcon.svelte
frontend/src/models/: SignupData.ts  Task.ts  User.ts
frontend/src/molecules/: Calendar.svelte  ClearableInput.svelte  DateTimeInput.svelte  DateTimePicker.svelte  TimeEntry.svelte
frontend/src/organisms/: Router.svelte  RouterView.svelte  SideMenu.svelte  TaskCard.svelte
frontend/src/pages/: SignIn.svelte  SignOut.svelte  SignUp.svelte  TimeTracking.svelte
frontend/src/pages/TimeTracking/: TimeTracking.module.scss  TimeTracking.module.scss.d.ts  TimeTracking.svelte
frontend/src/services/: api.js  api.ts
frontend/src/store/: auth.js  auth.ts  trackingCanvas.ts
frontend/src/styles/: _global.scss  _variables.scss  index.sass  index.scss
frontend/src/styles/global/: variables.sass
frontend/src/styles/helpers/: colors.sass  flex.sass  other.sass  sizing.sass
