[package]
name = "api"
version = "0.1.0"
authors = ["Aleksander Krawiel <aleksander.krawiel@makimo.pl>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.6", features = ["postgres", "uuid"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
postgres = { version = "0.19.1", features = ["with-uuid-0_8"] }
rocket = "0.4.7"
serde = { version = "1.0.125", features = ["derive"] }
uuid = "0.6.5"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_postgres_pool", "json", "uuid"]
