[package]
name = "rogalik"
version = "0.1.0"
authors = ["Aleksander Krawiel <aleksander.krawiel@makimo.pl>"]
edition = "2018"

[workspace]
members = ["rogalik_*"]

[dependencies]
rogalik_db = { path = "rogalik_db", version = "*" }
rogalik_endpoints = { path = "rogalik_endpoints", version = "*" }
rocket = "0.4.7"
