[package]
name = "rogalik_db"
version = "0.1.0"
authors = ["Aleksander Krawiel <aleksander.krawiel@makimo.pl>"]
edition = "2018"

[dependencies]
blake3 = "0.3.7"
diesel = { version = "1.4.6", features = ["postgres", "uuid"] }
diesel_migrations = "1.4.0"
postgres = { version = "0.19.1", features = ["with-uuid-0_8"] }
rocket = "0.4.7"
serde = { version = "1.0.125", features = ["derive"] }
uuid = { version = "0.6.5", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_postgres_pool", "json", "uuid"]
