[package]
name = "rogalik_endpoints"
version = "0.1.0"
authors = ["Aleksander Krawiel <aleksander.krawiel@makimo.pl>"]
edition = "2018"

[dependencies]
rogalik_db = { version = "0.1.0", path = "../rogalik_db" }
rocket = "0.4.7"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_postgres_pool", "json", "uuid"]
